# vellium

./: .gitignore  AGENTS.md  README.md  index.html  main_this-is-our-spot-leave-5070bac83080_spec_v2.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.tsbuildinfo  tsconfig.electron.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-desktop.yml
bundled-plugins/plugin-theme-catppuccin/: plugin.json
data/: book-cabf119a-dd0f-4e3f-86a5-cff88aa0fc44.md  sillytauri.db  sillytauri.db-shm  sillytauri.db-wal
docs/plugins/: README.md
docs/vellium/: README.md  characters-and-lorebooks.md  chat-and-rp.md  getting-started.md  knowledge-and-rag.md  plugins-and-security.md  runtime-and-integration-reference.md  settings-and-providers.md  tool-calls-and-media.md  troubleshooting.md  writing.md  (+1 more)
electron/: liveMedia.ts  localModelInstaller.ts  localModelIpc.ts  main.ts  managedBackendIpc.ts  managedBackends.ts  mediaPermissions.test.ts  mediaPermissions.ts  preload.ts  security.ts
scripts/: after-pack.cjs  build-ohf-piper-runtime.py  check-architecture.cjs  ensure-better-sqlite3.cjs  ensure-dev-port.cjs  prefetch-electron.cjs  requirements-ohf-piper.txt  run-build-icons.cjs  run-dist.cjs
server/: db.ts  index.ts  runtimeConfig.ts
src/: App.tsx  electron.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs  state.rs  storage.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/rp_engine/: mod.rs
src-tauri/src/domain/writer_engine/: mod.rs
(+202 files in other folders)
