[package]
name = "vellum"
version = "0.1.0"
description = "RP/NSFW desktop chat app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tauri = { version = "2", features = [] }
tokio = { version = "1.49.0", features = ["time"] }
reqwest = { version = "0.12.24", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3.31"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
url = "2.5.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
